# opengl

./: CMakeLists.txt  build.sh  main.c
inc/: file_utils.h  material.h  mesh.h
src/: main.c  material.c  mesh.c
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/utils/: file_utils.c
